SunnyTokenizerLexer needs html